--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,13 +1,18 @@
 .navbar{
+height: 338px;
 width: 100vw;
-height: 100px;
-background-color: #fffdd0;
-margin: 0px;
+background-image: url("./../assets/pictures/website background.jpg");
+display: flex;
+justify-content: space-evenly;
+align-items: flex-start;
+z-index: -1;
 }
 .nav_links{
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    width: 100%;
+    align-items: flex-start ;
 }
 a:link {
     text-decoration: none;
@@ -16,12 +21,12 @@ a:link {
 
 a:hover {
     text-decoration: underline;
-    color: #B2968D
+    color: blue;
 }
-
+ 
 li {
-    color: #01796F
+    color: white;
 }
 li:hover{
-    color: #B2968D
+    color: blue;
 }
